--- a/ControleEstoqueCompraVenda/BLL_BusinessLogicLayer/BLL_BusinessLogicLayer.csproj
+++ b/ControleEstoqueCompraVenda/BLL_BusinessLogicLayer/BLL_BusinessLogicLayer.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FilialNegocios.cs" />
     <Compile Include="PedidoItemNegocios.cs" />
     <Compile Include="PedidoNegocios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
